Add updateProfile function to the ProfileService
